# C68k

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  lockstep.yml
docs/: README.md  architecture.md  c99-conformance.md  implementation-plan.md  libc-and-toolchain.md  libc-archive-design.md  reference-manual.md  sdk.md  users-manual.md
include/: limits.h  stdint.h
lib/heap/: GetMachineHeap.a68  GetMachineHeaps.a68  HeapAlloc.a68  HeapArena.a68  HeapAutoValidateFlagCheck.a68  HeapCoalesce.a68  HeapCompact.a68  HeapCreate.a68  HeapData.a68  HeapDebugFillOnFree.a68  HeapDestroy.a68  HeapFree.a68  HeapGetError.a68  HeapInitialize.a68  HeapInvalidateBlockHeader.a68  HeapReAlloc.a68  HeapSize.a68  HeapSlab.a68  HeapSmallAlloc.a68  HeapSmallCompact.a68  HeapSmallCtl.a68  HeapSmallFree.a68  HeapSmallReAlloc.a68  HeapSmallValidate.a68  HeapSmallWalk.a68  HeapStats.a68  HeapUnlinkFromBlockChain.a68  HeapUnlinkFromFreeBlockChain.a68  HeapValidate.a68  HeapValidateHandle.a68  HeapWalk.a68  VENDOR.txt  heap.inc
lib/libm/: VENDOR.txt  ieee754.inc  ieee754d.inc
lib/runtime/: rt68k.a68
samples/: bare.c  filerw.c  fp64conv.c  hello.c  hexdump.c  multi.c  multi_helper.c  printftest.c
src/: README.md  chibicc.h  codegen68k.c  compat.c  compat.h  emit_elf.c  main.c  parse.c  preprocess.c  tokenize.c  type.c
tests/: driver.sh  macro.c  pragma-once.c  typemodel.c
tools/: bootstrap-simenv.ps1  build-libc.ps1  build-libheap.ps1  build-libm.ps1  build-samples.ps1  debug-demo.ps1  package.ps1  run-lockstep.ps1  vendor-sync.ps1
(+286 files in other folders)
